fixes #1793 - flash message aligns properly. updated flash message div to new id flash-message instead of message to not confuse it with other things called messages

--- a/app/stylesheets/ui_base/_flash_messages.sass
+++ b/app/stylesheets/ui_base/_flash_messages.sass
@@ -1,13 +1,13 @@
 //
 // flash messages
 //
-#message
+#flash-message
   +container
+  clear: both
   background= !page_bg
   #message-container
-    +columns(14)
-    +full
-#status-message
+    +full-width
+#flash-status-message
   width: 744px
   margin-bottom: 10px
 .small_notice
@@ -21,7 +21,7 @@
     margin-left: 30px
   li
     list-style-type: disc
-  
+
 .error
   border: 1px solid red
   background: #fcc
@@ -30,6 +30,6 @@
   background: #cfc
 .info
   padding: 0 0 0 5px
-    
+
 /* @end */
 
